2007-09-17  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (load): Fixed a bug due to one or more '=' in
	equations while loading a component.

2007-08-15  Stefan Jahn  <stefan@lkcc.org>

	* subcircuit.cpp (createSymbol): Remove unused ports for symbol
	painting algorithm.  It comes to unused ports when the port
	numbering does not start with 1 or a number is missing in a row of
	numbers.

	* component.cpp (analyseLine): Mark really used subcircuit ports
	while loading a symbol.

2007-08-13  Stefan Jahn  <stefan@lkcc.org>

	* vfile.cpp (vFile): New component: file based voltage source.
	Thanks a lot to Gunther!

2007-05-30  Stefan Jahn  <stefan@lkcc.org>

	* spicefile.cpp, spicedialog.cpp: Tested code for all three SPICE
	preprocessors.  Made small modicfications for spiceprm as well as
	for Win32.

2007-05-29  Stefan Jahn  <stefan@lkcc.org>

	* spicedialog.cpp (loadSpiceNetList): Added selection box for
	SPICE preprocessors.  The preprocessor is run before the actual
	SPICE to Qucs conversion.

	* spicefile.cpp (recreateSubNetlist): Added preprocessor call if
	necessary.

2007-05-10  Stefan Jahn  <stefan@lkcc.org>

	* vhdlfile.cpp (getSubcircuitFile), verilogfile.cpp
	(getSubcircuitFile), subcircuit.cpp (netlist), spicefile.cpp
	(recreateSubNetlist): Using new file name mangling functions.

	* libcomp.cpp (loadSection): Additionally loading the file include
	references.
	(createSubNetlist): Also put file includes into the netlist
	stream.

2007-05-09  Stefan Jahn  <stefan@lkcc.org>

	* libcomp.cpp: Enabled library component to emit analog as well as
	digital netlist code.

2007-05-08  Stefan Jahn  <stefan@lkcc.org>

	* verilogfile.cpp, vhdlfile.cpp, spicefile.cpp (createSubNetlist):
	File components can now create the netlist parts on their own.

2007-04-19  Stefan Jahn  <stefan@lkcc.org>

	* eqndefined.cpp (EqnDefined): Added new equation defined
	device.  Icon still missing.

	* hicumL2p1.cpp (hicumL2p1): Added description for the 'fbc' and
	'krbi' properties.