@@ -1,3 +1,8 @@
+2007-10-21  Stefan Jahn  <stefan@lkcc.org>
+
+	* vfile.cpp (vFile): Added new voltage gain and delay time
+	properties.
+
 2007-09-17  Stefan Jahn  <stefan@lkcc.org>
 
 	* component.cpp (load): Fixed a bug due to one or more '=' in
